[package]
name = "digitalocean"
version = "0.0.4"
authors = ["hoverbear <andrew@hoverbear.org>"]
repository = "https://github.com/hoverbear/digitalocean"
categories = ["development-tools", "api-bindings"]
homepage = "https://github.com/hoverbear/digitalocean"
documentation = "https://docs.rs/crate/digitalocean/"
description = "A pure Rust DigitalOcean API binding."
edition = "2018"

keywords = ["DigitalOcean", "IaaS", "API"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "hoverbear/digitalocean" }
maintenance = { status = "experimental" }

[features]
default = ["reqwest"]

[dependencies]
getset = "0.0.5"
failure = "0.1.0"
failure_derive = "0.1.1"
lazy_static = "0.2.8"
log = "0.3.8"
reqwest = { version = "0.9.4", optional = true }
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
url = "1.5.1"
url_serde = "0.2.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dev-dependencies]
dotenv = "0.10.0"
env_logger = "0.4.3"

[dev-dependencies.uuid]
features = ["v4"]
version = "0.5"
