[package]
name = "digitalocean"
version = "0.0.4"
authors = ["hoverbear <andrew@hoverbear.org>"]
repository = "https://github.com/hoverbear/digitalocean"
categories = ["development-tools", "api-bindings"]
homepage = "https://github.com/hoverbear/digitalocean"
documentation = "https://docs.rs/crate/digitalocean/"
description = "A pure Rust DigitalOcean API binding."
edition = "2018"

keywords = ["DigitalOcean", "IaaS", "API"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "hoverbear/digitalocean" }
maintenance = { status = "experimental" }

[features]
default = ["reqwest"]
spaces = [
  "futures",
  "hmac",
  "http",
  "hyper",
  "hyper-rustls",
  "serde-xml-rs",
  "sha2",
  "tokio"
]

[dependencies]
getset = "0.0.7"
failure = "0.1.5"
failure_derive = "0.1.5"
futures = { version = "0.1.26", optional = true }
hmac = { version = "0.7.0", optional = true }
http = { version = "0.1.17", optional = true }
hyper = { version = "0.12.27", optional = true }
hyper-rustls = { version = "0.16.1", optional = true }
lazy_static = "1.3.0"
log = "0.4.6"
reqwest = { version = "0.9.11", optional = true }
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
serde-xml-rs = { version = "0.3.1", optional = true }
sha2 = { version = "0.8.0", optional = true }
tokio = { version = "0.1.19", features = ["async-await-preview"], optional = true }
url = "1.7.2"
url_serde = "0.2.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dev-dependencies]
dotenv = "0.13.0"
env_logger = "0.6.1"

[dev-dependencies.uuid]
features = ["v4"]
version = "0.7.2"

[[test]]
name = "bucket"
path = "tests/bucket.rs"
required-features = ["spaces"]
